--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
         <h2 class="h1 hero-title">Journey to explore world</h2>
 
         <p class="hero-text">
-          Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus? Suscipit class corporis nostra rem quos
-          voluptatibus habitant?
-          Fames, vivamus minim nemo enim, gravida lobortis quasi, eum.
+          And I bring ease. Wise? Which unrighteousness, the penalties? Supporting the body of our class who dwell with luxuries? Hunger, we live the least nobody indeed, pregnant lobe almost, him.
         </p>
 
         <div class="btn-group">
