--- a/index.html
+++ b/index.html
@@ -234,9 +234,7 @@
         <h2 class="h2 section-title">Popular destination</h2>
 
         <p class="section-text">
-          Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-          Sit ornare
-          mollitia tenetur, aptent.
+         Custom-Crafted Tour Packages for Unforgettable Holiday Experiences in World.
         </p>
 
         <ul class="popular-list">
@@ -267,7 +265,7 @@
                 </h3>
 
                 <p class="card-text">
-                  Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                  San Miguel, city, east-central El Salvador, at the foot of San Miguel and Chinameca volcanoes.
                 </p>
 
               </div>
@@ -301,7 +299,7 @@
                 </h3>
 
                 <p class="card-text">
-                  Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                  Tallest building in the world. Tallest free-standing structure in the world. Highest number of stories in the world.
                 </p>
 
               </div>
@@ -335,7 +333,7 @@
                 </h3>
 
                 <p class="card-text">
-                  Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                  Kiyomizu-dera is a beautiful Buddhist temple in Kyoto, Japan, surrounded by scenic hills.
                 </p>
 
               </div>
