--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <h2 class="h1 hero-title">Journey to explore world</h2>
 
         <p class="hero-text">
-          And I bring ease. Wise? Which unrighteousness, the penalties? Supporting the body of our class who dwell with luxuries? Hunger, we live the least nobody indeed, pregnant lobe almost, him.
+          Let us plan you a perfect World Holiday
         </p>
 
         <div class="btn-group">
@@ -364,9 +364,7 @@
         <h2 class="h2 section-title">Checkout Our Packeges</h2>
 
         <p class="section-text">
-          Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-          Sit ornare
-          mollitia tenetur, aptent.
+          Guest Satisfaction is Our Goal;
         </p>
 
         <ul class="package-list">
@@ -383,8 +381,7 @@
                 <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
 
                 <p class="card-text">
-                  Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque,
-                  cras, aspernatur.
+                   the gentle lull of waves brushing against the sand, creating a soothing melody that resonates through the air.
                 </p>
 
                 <ul class="card-meta-list">
@@ -457,8 +454,7 @@
                 <h3 class="h3 card-title">Summer Holiday To The Oxolotan River</h3>
 
                 <p class="card-text">
-                  Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque,
-                  cras, aspernatur.
+                  "Experience the ultimate summer escape at the serene Oxolotan River, where adventure meets tranquility!"
                 </p>
 
                 <ul class="card-meta-list">
@@ -531,8 +527,7 @@
                 <h3 class="h3 card-title">Santorini Island's Weekend Vacation</h3>
 
                 <p class="card-text">
-                  Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque,
-                  cras, aspernatur.
+                 "Unwind and indulge in the breathtaking beauty of Santorini Island with a perfect weekend getaway!"
                 </p>
 
                 <ul class="card-meta-list">
@@ -616,9 +611,7 @@
         <h2 class="h2 section-title">Photo's From Travellers</h2>
 
         <p class="section-text">
-          Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium.
-          Sit ornare
-          mollitia tenetur, aptent.
+          "Discover the world's most stunning destinations through the captivating lens of our travelers' photos, and get inspired for your next adventure!"
         </p>
 
         <ul class="gallery-list">
@@ -675,9 +668,7 @@
           <h2 class="h2 section-title">Ready For Unforgatable Travel. Remember Us!</h2>
 
           <p class="section-text">
-            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-            laudantium. Sit ornare
-            mollitia tenetur, aptent.
+            Whether it’s your first international trip or you have travelled abroad multiple times, planning a holiday to a distant land is always a special feeling. Our international holiday packages are well-made and hold a high reputation among customers who have been travelling with us. Here, take a look at our top international holiday packages. 
           </p>
         </div>
 
@@ -705,9 +696,7 @@
       <div class="footer-brand">
 
         <p class="footer-text">
-          Urna ratione ante harum provident, eleifend, vulputate molestiae proin fringilla, praesentium magna conubia
-          at
-          perferendis, pretium, aenean aut ultrices.
+          “Travel is the only thing you buy that makes you richer”. We completely swear by this and believe in fulfilling travel dreams that make you invariably rich by the day. We have been selling beautiful experiences for years through our state-of-the-art designed holiday packages and other essential travel services. We inspire our customers to live a rich life, full of unforgettable travel experiences.
         </p>
 
       </div>
