--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
           <li class="contact-item">
 
 
-            <address>3146 Koontz, California</address>
+            <address>1232 Subhash Nagar, Mughalsarai</address>
           </li>
 
         </ul>
